Fixed z-index for blogs.

--- a/public/assets/styles/main.css
+++ b/public/assets/styles/main.css
@@ -605,7 +605,7 @@ figure.effect-sadie h2.color-black {
 /* Anchor will cover the whole item by default */
 /* For some effects it will show as a button */
 .grid figure figcaption > a {
-  z-index: 1000;
+  z-index: 2;
   text-indent: 200%;
   white-space: nowrap;
   font-size: 0;
